--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -32,9 +32,15 @@
               <li class="nav-item">
                 <a class="nav-link" href='{% url 'recipe-register' %}'>Register</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href='{% url 'login' %}'>Login</a>
+              </li>
               {% else %}
               <li class="nav-item">
                 <a class="nav-link" href='{% url 'recipe-submit' %}'>Submit a Recipe</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href='{% url 'logout' %}'>Logout</a>
               </li>
               {% endif %}
 
