--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -43,6 +43,11 @@
                 <a class="nav-link" href='{% url 'logout' %}'>Logout</a>
               </li>
               {% endif %}
+              {% if user.is_authenticated and user.is_staff %}
+              <li class="nav-item">
+                <a class="nav-link" href='/admin'>Admin</a>
+              </li>
+              {% endif %}
 
               <!-- NAV FEATURES NOT BEING USED 
               <li class="nav-item dropdown">
