--- a/src/core/templates/home.html
+++ b/src/core/templates/home.html
@@ -2,7 +2,13 @@
 
 {% block content %}
     <h1>Recipe Builder Home</h1>
-
+    {% if messages %}
+        {% for message in messages %}
+            <div {% if message.tags %} class="{{ message.tags }}" {% endif %} role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
     <p>Welcome to Recipe Builder! Here are the latest recipes:</p>
     {% for post in posts %}
         <div style="border-style: dotted; padding-left: 10px; margin: 0 auto;">
