--- a/src/core/templates/register.html
+++ b/src/core/templates/register.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+{% if message != '' %}
+    <div class="alert alert-danger" role="alert">
+        {{ message }}
+    </div>
+{% endif %}
+
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
