--- a/src/core/templates/home.html
+++ b/src/core/templates/home.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Recipe Builder Home</h1>
+    <h1 class="text-center">Latest Recipes</h1>
+    <p class="text-center">What will you make today?</p>
     {% if messages %}
         {% for message in messages %}
             <div {% if message.tags %} class="{{ message.tags }}" {% endif %} role="alert">
@@ -9,17 +10,33 @@
             </div>
         {% endfor %}
     {% endif %}
-    <p>Welcome to Recipe Builder! Here are the latest recipes:</p>
+
+    <!-- Display Recent Recipes -->
+    <div class="container mt-4">
+        <div class="row">
     {% for post in posts %}
-        <div style="border-style: dotted; padding-left: 10px; margin: 0 auto;">
+        {% comment %} <div style="border-style: dotted; padding-left: 10px; margin: 0 auto;">
             <h3>{{ post.title }}</h3>
             <p>Author: {{ post.author }}</p>
             <p>{{ post.content }}</p>
             <p style="font-style: italic;">Posted on {{ post.date }}</p>
+        </div> {% endcomment %}
+        
+        <div class="col-12 col-md-4 mb-4">
+            <div class="card d-flex flex-column h-100">
+                <a href="#" class="link-light text-decoration-none"><h5 class="card-header text-bg-dark ">📄 {{ post.title }}</h5></a>
+                <div class="card-body">
+                    <h5 class="card-title">{{ post.content }}</h5>
+                    
+                </div>
+                <div class="card-footer">
+                    <p class="card-text">Posted by <a href="profile/{{post.author}}" class="link-dark">{{ post.author }}</a> on {{ post.date }}</p>
+                    </div>
+            </div>
         </div>
-        <br>
     {% endfor %}
-
+    </div>
+</div>
     <h1>{{ recipe.title }}</h1>
     <p>{{ recipe.content }}</p>
     <!-- Add more details as needed -->
