--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link
+  rel="icon"
+  href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍳</text></svg>"
+/>
 
     {% if title %}
         <title>Recipe Builder - {{ title }}</title>
