--- a/src/core/templates/login.html
+++ b/src/core/templates/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+<h1 class="text-center">Registered User Login</h1>
+<br>
     <p>{{ message }}</p>
     <form method="post">
         {{ form.as_p }}
