--- a/src/core/templates/register.html
+++ b/src/core/templates/register.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<h1 class="text-center">New User Registration</h1>
+<br>
 {% if message != '' %}
     <div class="alert alert-danger" role="alert">
         {{ message }}
