Changes to searchbar and recipe submission form

--- a/src/core/templates/recipe_submission.html
+++ b/src/core/templates/recipe_submission.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<div class=container>
   <h2>Submit a Recipe</h2>
 
   <!-- <form method="post">
@@ -27,4 +29,5 @@ function addIngredientField() {
     {{ form.as_p }}
     <button type="submit">Submit</button>
   </form>
+
 {% endblock %}
