--- a/src/core/templates/recipe_detail.html
+++ b/src/core/templates/recipe_detail.html
@@ -1,26 +1,21 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
+<div class="container">
+  <h1>{{ recipe.title }}</h1>
+  <p>{{ recipe.content }}</p>
+  <p>{{ recipe.author }}</p>
+  <p>{{ recipe.date }}</p>
 
-{% block content %}
-<div class=container>
-<h1>{{ recipe.title }}</h1>
-<p>{{ recipe.content }}</p>
-<p>{{ recipe.author }}</p>
-<p>{{ recipe.date }}</p>
-
-<form method="post" action="{% url 'rate_recipe' recipe.id %}">
+  <form method="post" action="{% url 'rate_recipe' recipe.id %}">
     {% csrf_token %}
     <label for="rating">Rate this recipe:</label>
-    <input type="number" id="rating" name="rating" min="1" max="5">
+    <input type="number" id="rating" name="rating" min="1" max="5" />
     <button type="submit">Submit Rating</button>
-</form>
+  </form>
 
-<p>Total Ratings: {{ recipe.rating_set.count }}</p>
+  <p>Total Ratings: {{ recipe.rating_set.count }}</p>
 
-{% if average_rating %}
-    Average Rating: {{ average_rating|floatformat:1 }}
-{% else %}
-    No ratings yet.
-{% endif %}
+  {% if average_rating %} Average Rating: {{ average_rating|floatformat:1 }} {%
+  else %} No ratings yet. {% endif %}
 </div>
 
 <!-- Display rating form here for authenticated users -->
