--- a/src/core/templates/edit_profile.html
+++ b/src/core/templates/edit_profile.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% block title %}Profile Page{% endblock title %} {%
-block content %}
+{% extends "base.html" %} {% block title %}Profile Page{% endblock title %} {% block content %}
 <div class="row my-3 p-3">
   <img
     class="img-rounded"
@@ -44,4 +43,5 @@ block content %}
     <button type="reset" class="btn btn-dark btn-lg">Reset</button>
   </form>
 </div>
+
 {% endblock content %}
