User recipes, Profile nav link

--- a/src/core/templates/profile.html
+++ b/src/core/templates/profile.html
@@ -11,4 +11,18 @@
 {% endif %} {% if user_profile.user == request.user %}
 <!-- Display edit button only for the current logged-in user's profile -->
 <a href="{% url 'edit-profile' %}" class="btn btn-primary">Edit Profile</a>
+{% endif %}
+
+<h3>Submitted Recipes:</h3>
+{% if user_recipes %}
+<ul>
+  {% for recipe in user_recipes %}
+  <li>
+    <a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.title }}</a>
+    <!-- Add other details of the recipe as needed -->
+  </li>
+  {% endfor %}
+</ul>
+{% else %}
+<p>No recipes submitted yet.</p>
 {% endif %} {% endblock %}
