--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -47,6 +47,9 @@
                         <a class="nav-link" href='{% url 'recipe-submit' %}'>Submit a Recipe</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href='{% url 'edit-profile' %}'>Profile</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href='{% url 'logout' %}'>Logout</a>
                     </li>
                     {% endif %}
