--- a/src/core/templates/recipe_submission.html
+++ b/src/core/templates/recipe_submission.html
@@ -38,11 +38,14 @@
             {{ form.as_table }}
         {% endfor %}
     </div>
-    
-    <button type="button" id="add-ingredient">Add Ingredient</button>
-<br><br>
-
-      <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="col-md-6 mb-3 mt-3">
+      <button type="button" id="add-ingredient" class="btn btn-secondary">Add Ingredient</button>
+  </div>
+    <div class="row">
+      <div class="col-md-6 mb-3">
+          <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+  </div>
   </form>
 </div>
 
