--- a/src/core/templates/recipe_detail.html
+++ b/src/core/templates/recipe_detail.html
@@ -18,7 +18,7 @@
     {% csrf_token %}
     <label for="rating">Rate this recipe:</label>
     <input type="number" id="rating" name="rating" min="1" max="5" />
-    <button type="submit">Submit Rating</button>
+    <button type="submit" class="btn btn-primary">Submit Rating</button>
   </form>
 
   <p>Total Ratings: {{ recipe.rating_set.count }}</p>
