--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -60,3 +60,11 @@ footer {
     margin: 0 -2px;  /* Adjust the margin to prevent a gap between stars */
     filter: drop-shadow(1px 1px 1px black); /* Add this line for a drop shadow */
 }
+
+#ingredients-formset input[name*='quantity'] {
+    width: 3%; /* Adjust the width as needed */
+}
+
+.nav-link.active {
+    color: black; 
+}
