--- a/src/core/templates/recipe_submission.html
+++ b/src/core/templates/recipe_submission.html
@@ -29,8 +29,14 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-md-6 mb-3">
-        <label for="id_content" class="form-label">Description/Instructions</label>
+        <label for="id_content" class="form-label">Description</label>
         <textarea class="form-control" name="content" id="id_content" rows="5"></textarea>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-6 mb-3">
+        <label for="id_instructions" class="form-label">Instructions</label>
+        <textarea class="form-control" name="instructions" id="id_instructions" rows="5"></textarea>
       </div>
     </div>
     <div id="ingredients-formset" class="text-center mb-3">
