--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -75,13 +75,13 @@ footer {
 
 .star-rating .star {
     display: inline-block;
-    margin: 0 -2px;  /* Adjust the margin to prevent a gap between stars */
-    filter: drop-shadow(1px 1px 1px black); /* Add this line for a drop shadow */
+    margin: 0 -2px; 
+    filter: drop-shadow(1px 1px 1px black);
 }
 
 
 #ingredients-formset input[name*='quantity'] {
-    width: 3%; /* Adjust the width as needed */
+    width: 3%; 
 }
 
 .nav-link.active {
@@ -89,7 +89,7 @@ footer {
 }
 
 .recipe-content {
-    white-space: pre-line;
+    white-space: normal;
 }
 
 .nutrition-info p {
@@ -107,11 +107,11 @@ footer {
 @media print {
     body {
       color: black;
-      background-color: white; /* Set background color to white */
+      background-color: white;
     }
   
     .rate-recipe {
-        display: none; /* Hide the rate recipe section when printing */
+        display: none;
       }
 
     .navbar {
