--- a/src/core/templates/recipe_detail.html
+++ b/src/core/templates/recipe_detail.html
@@ -66,7 +66,7 @@
     {% endif %}
   </div>
   <div class="col-md-9 d-flex align-items-center">
-    <p><br><i>Created by <a href="profile/{{recipe.author}}" class="link-dark">{{ recipe.author }}</a>
+    <p><br><i>Created by <a href="../../profile/{{recipe.author}}" class="link-dark">{{ recipe.author }}</a>
         <br>{{ recipe.date }}
       </i>
     </p>
