--- a/src/core/templates/edit_recipe.html
+++ b/src/core/templates/edit_recipe.html
@@ -44,7 +44,7 @@
     <div id="ingredients-formset" class="text-center mb-3">
       {{ formset.management_form }}
       {% for form in formset %}
-        {{ form.as_table }}
+        <p>{{ form.as_table }}</p>
       {% endfor %}
     </div>
     <div class="row justify-content-center">
