fixed avatar placement

--- a/src/core/templates/recipe_detail.html
+++ b/src/core/templates/recipe_detail.html
@@ -65,14 +65,16 @@
 </div>
 {% endif %}
 
+<div class="container">
 <div style="margin-bottom: 25px;" class="row">
   <div class="col-md-1">
     {% if recipe.author.profile.avatar %}
       <img class="img-rounded" style="max-width: 100px" src="{{ recipe.author.profile.avatar.url }}" alt="Avatar" />
     {% endif %}
   </div>
+</div>
   <div class="col-md-9 d-flex align-items-center">
-    <p><br><i>Created by <a href="../../profile/{{recipe.author}}" class="link-dark">{{ recipe.author }}</a>
+    <p><i>Created by <a href="../../profile/{{recipe.author}}" class="link-dark">{{ recipe.author }}</a>
         <br>{{ recipe.date }}
       </i>
     </p>
